# testcode

FileTransferClient/: CMakeLists.txt  CMakeSettings.json
FileTransferClient/FileTransferClient/: CMakeLists.txt  FileTransferClient.cpp  FileTransferClient.h
FileTransferClient/FileTransferClient/client/: BoostAsioClient.cpp  BoostAsioClient.h  CMakeLists.txt  ChartClient.cpp  ChartClient.h
FileTransferClient/FileTransferClient/interface/: CMakeLists.txt  FileTrans_constants.h  FileTrans_types.cpp  FileTrans_types.h  TransferFile.cpp
FileTransferClient/FileTransferClient/protocol/: global_def.h  protocol.h  protocolHandler.cpp
FileTransferServer/: CMakeLists.txt  CMakeSettings.json  test.txt
FileTransferServer/FileTransferServer/: CMakeLists.txt  FileTransferServer.cpp  FileTransferServer.h
FileTransferServer/FileTransferServer/Server/: BoostAsioServer.cpp  BoostAsioServer.h  CMakeLists.txt  ChartServer.cpp  ChartServer.h  DownloadFileInfo.cpp  DownloadFileInfo.h
FileTransferServer/FileTransferServer/db/: CMakeLists.txt  redisdb.cpp  redisdb.h
FileTransferServer/FileTransferServer/interface/: CMakeList.txt  FileTrans_constants.cpp  TransferFile.h  TransferFileServer.cpp  TransferFileServer.h  TransferFile_server.skeleton.cpp
FileTransferServer/FileTransferServer/protocol/: CMakeLists.txt  protocol.h  protocolHandler.h
FileTransferServer/FileTransferServer/thrift/: FileTrans.thrift
